--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -5,6 +5,11 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="field">
+    <%= f.label :color %><br />
+    <%= f.text_field :color, autocomplete: "Color" %>
+  </div>
+
+  <div class="field">
     <%= f.label :password, "New password" %><br />
     <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em><br />
