--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,9 +8,20 @@
     <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
   </div>
 
+  <div class="field">
+    <%= f.label :color %><br />
+    <%= f.text_field :color, autofocus: true, autocomplete: "color" %>
+  </div>
+
     <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autocomplete: "email" %>
+  </div>
+
+  <div class="form-group">
+    <label class="btn btn-primary">
+        Imagen <%=f.file_field :image, style: 'display:none' %>
+    </label>
   </div>
 
   <div class="field">
