--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -12,8 +12,11 @@
   <% end %>
 
     <div class="form-group">
-        <%= form.label :Players %>
-        <%= form.text_field :player, class: 'form-control' %>
+      <%= form.label :Players %>
+      <%= form.fields_for :player_games do |player_game| %>
+        <%= render 'player_game_fields', f: player_game %>
+      <% end %>
+      <%= link_to_add_association "add Player", form, :player_games %>
     </div>
 
 
