Se añadio las vistas de cada Player

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -9,7 +9,7 @@
                         <p class="card-text">
                             <%= player.name %>
                         </p>
-                        <%= link_to 'Estadisticas', index_path, class: 'btn btn-warning' %>
+                        <%= link_to 'Estadisticas', player_path(player), class: 'btn btn-primary' %>
                     </div>
                 </div>
             </div>
