--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <%= link_to 'Home', index_path, class: "nav-link" %>
+                    <%= link_to 'Home', players_path, class: "nav-link" %>
                 </li>
             
 
