--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,11 +8,12 @@
                 <li class="nav-item">
                     <%= link_to 'Home', players_path, class: "nav-link" %>
                 </li>
-            
 
+               
                 <% if current_player %>
                     <%= link_to 'Logout', destroy_player_session_path, method: :delete, class: "nav-link" %>
                     <%= link_to 'Edit_player', edit_player_registration_path, class: "nav-link" %>
+                    <%= link_to 'New Game', new_game_path, class: "nav-link" %>
 
                 <% else %>
                     <%= link_to 'Register', new_player_registration_path, class: "nav-link" %>
