--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,10 +1,10 @@
 <%= form_with(model: @game) do |form| %>
     <% if @game.errors.any? %>
         <div id="error_explanation">
-        <h2><%= pluralize(room.errors.count, "error") %> prohibited thid room from beging saved: </h2>
+        <h2><%= pluralize(@game.errors.count, "error") %> prohibited thid game from beging saved: </h2>
 
         <ul>
-            <% room.errors.full_messages.each do |message| %>
+            <% @game.errors.full_messages.each do |message| %>
             <li><%= message %></li>
             <% end %>
         </ul>
