modificar vista de juegos y registro de jugadores

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 
   <div class="field">
     <%= f.label :color %><br />
-    <%= f.text_field :color, autofocus: true, autocomplete: "color" %>
+    <%= f.text_field :color, autofocus: true, autocomplete: "color", type: 'color' %>
   </div>
 
     <div class="field">
