--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,18 @@
                     <%= link_to 'Home', players_path, class: "nav-link" %>
                 </li>
 
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Juegos
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="http://localhost:3000/games">Another action</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="http://localhost:3000/games">Something else here</a></li>
+                    </ul>
+                </li>
+
                
                 <% if current_player %>
                     <%= link_to 'Logout', destroy_player_session_path, method: :delete, class: "nav-link" %>
@@ -24,3 +36,5 @@
         </div>
     </div>
 </nav>
+
+
