--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,6 +31,7 @@
                     <%= link_to 'Register', new_player_registration_path, class: "nav-link" %>
                     <%= link_to ' Login', edit_player_registration_path, class: "nav-link" %>
                 <% end %>
+                <%= link_to 'Score', score_players_path, class: "nav-link" %>
             </ul>
         
         </div>
