--- a/app/views/players/score.html.erb
+++ b/app/views/players/score.html.erb
@@ -20,7 +20,7 @@
         
         <td><%= index + 1 %></td>
         <td><%= player.name %></td>
-        <td><%= player.games.count %></td>
+        <td><%= player.won_games.count %></td>
         <td><%= player.assassin_counter %></td>
         <td><%= player.victim_counter %></td>
       </tr>
