crear migracion de dinero

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -22,6 +22,16 @@
       <%= link_to_add_association "add Player", form, :player_games %>
     </div>
 
+    <div class="field">
+      <%= form.label :death_cash, "Valor de la muerte" %><br />
+      <%= form.text_field :death_cash %>
+    </div>
+
+    <div class="field">
+      <%= form.label :game_cash, "Valor del case" %><br />
+      <%= form.text_field :game_cash %>
+    </div>
+
 
 
   <div class="row">
