--- a/app/views/players/score.html.erb
+++ b/app/views/players/score.html.erb
@@ -10,6 +10,7 @@
       <th scoope="col">Puntos</th>
       <th scoope="col">Asesinatos</th>
       <th scoope="col">Muertes</th>
+      <th scoope="col">Finanzas</th>
       <th scoope="col" colspan="3"></th>
     </tr>
   </thead>
@@ -23,6 +24,7 @@
         <td><%= player.won_games.count %></td>
         <td><%= player.assassin_counter %></td>
         <td><%= player.victim_counter %></td>
+        <td><%= player.finanzas %></td>
       </tr>
     <% end %>
   </tbody>
