--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -12,7 +12,7 @@
                     <th scoope="col">Puntos</th>
                     <th scoope="col">Asesinatos</th>
                     <th scoope="col">Muertes</th>
-                    <th scoope="col">Esperanzas%</th>
+                    <th scoope="col">Finanzas</th>
                     <th scoope="col" colspan="3"></th>
                     </tr>
                 </thead>
@@ -23,7 +23,7 @@
                         <td><%= @player.won_games.count %></td>
                         <td><%= @player.assassin_counter %></td>
                         <td><%= @player.victim_counter %></td>
-                        <td><%= rand(100) %></td>
+                        <td><%= @player.finanzas %></td>
                     </tr>
                 </tbody>
             </table>
