--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,17 +9,11 @@
                     <%= link_to 'Inicio', players_path, class: "nav-link" %>
                 </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Juegos
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="http://localhost:3000/games">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="http://localhost:3000/games">Something else here</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <%= link_to 'Juegos', games_path, class: "nav-link" %>
                 </li>
+
+
 
                
                 <% if current_player %>
