--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <%= link_to 'Home', players_path, class: "nav-link" %>
+                    <%= link_to 'Inicio', players_path, class: "nav-link" %>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -23,15 +23,16 @@
 
                
                 <% if current_player %>
-                    <%= link_to 'Logout', destroy_player_session_path, method: :delete, class: "nav-link" %>
-                    <%= link_to 'Edit_player', edit_player_registration_path, class: "nav-link" %>
-                    <%= link_to 'New Game', new_game_path, class: "nav-link" %>
+                    <%= link_to 'Cerrar sesión', destroy_player_session_path, method: :delete, class: "nav-link" %>
+                    <%= link_to 'Editar perfil', edit_player_registration_path, class: "nav-link" %>
+                    <%= link_to 'Nuevo Juego ', new_game_path, class: "nav-link" %>
 
                 <% else %>
-                    <%= link_to 'Register', new_player_registration_path, class: "nav-link" %>
-                    <%= link_to ' Login', edit_player_registration_path, class: "nav-link" %>
+                    <%= link_to 'Registrarse', new_player_registration_path, class: "nav-link" %>
+                    <%= link_to ' Ingresar', edit_player_registration_path, class: "nav-link" %>
                 <% end %>
-                <%= link_to 'Score', score_players_path, class: "nav-link" %>
+
+                <%= link_to 'Posiciones', score_players_path, class: "nav-link" %>
             </ul>
         
         </div>
