--- a/app/views/players/score.html.erb
+++ b/app/views/players/score.html.erb
@@ -10,6 +10,8 @@
       <th scoope="col">Puntos</th>
       <th scoope="col">Asesinatos</th>
       <th scoope="col">Muertes</th>
+      <th scoope="col">Verdugo</th>
+      <th scoope="col">Presa facil</th>
       <th scoope="col">Finanzas</th>
       <th scoope="col" colspan="3"></th>
     </tr>
@@ -18,12 +20,15 @@
   <tbody>
     <% @players.each_with_index do |player, index| %>
       <tr>
-        
+        <% verdugo = player.verdugos.first %>
+        <% presa = player.presas.first %>
         <td><%= index + 1 %></td>
         <td><%= player.name %></td>
         <td><%= player.won_games.count %></td>
         <td><%= player.assassin_counter %></td>
         <td><%= player.victim_counter %></td>
+        <td><%= verdugo.first %>: <%= verdugo.last %></td>
+        <td><%= presa.first %>: <%= presa.last %></td>
         <td><%= player.finanzas %></td>
       </tr>
     <% end %>
