--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,11 +37,7 @@
 
                 <% else %>
                     <li class="nav-item">
-                        <%= link_to 'Registrarse', new_player_registration_path, class: "nav-link" %>
-                    </li>
-
-                    <li class="nav-item">
-                        <%= link_to ' Ingresar', edit_player_registration_path, class: "nav-link" %>
+                        <%= link_to ' Ingresar', new_player_session_path, class: "nav-link" %>
                     </li>
                 <% end %>
 
