--- a/app/views/games/in_game.html.erb
+++ b/app/views/games/in_game.html.erb
@@ -23,7 +23,7 @@
     </table>
   </div>
 
-  <div class="col-md-4 ">
+  <div class="col-md-3 ">
       <table class="table table-striped">
       <thead class="thead-dark">
         <tr>
@@ -40,6 +40,37 @@
 
             <td><%= pj.player.name %></td> 
             <td>$<%= pj.cash %></td>
+
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="col-md-6 ">
+      <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+            <th scope="col"></th>
+
+            <% @game.player_games.each do |pj| %>
+              <th scope="col"><%= pj.player.name %></th>
+            <% end %>
+            <th scope="col">Total</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @game.player_games.each do |pj| %>
+          <tr>
+
+            <td><%= pj.player.name %></td>
+
+            <% @game.player_games.each do |player| %>
+              <td><%= Death.where(assassin_id: pj.player.id, victim_id: player.player.id,game_id: @game.id).count %></td>
+            <% end %>
+            
+            <td><%= Death.where(assassin_id: pj.player.id, game_id: @game.id).count %></td>
 
           </tr>
         <% end %>
