--- a/app/views/games/in_game.html.erb
+++ b/app/views/games/in_game.html.erb
@@ -1,3 +1,68 @@
+<% if @game.player_id.blank? %>
+  <%= form_with(model: @death) do |form| %>
+      <% if @death.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@death.errors.count, "error") %> prohibited thid death from beging saved: </h2>
+
+            <ul>
+                <% @death.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+            </ul>
+          </div>
+      <% end %>
+
+      <div class="field">
+        <%= form.label :Assassin, "Asesino" %> <br>
+        <%= form.select :assassin_id, options_from_collection_for_select(@game.players, :id, :name) %>
+      </div>
+
+      <div class="field">
+        <%= form.label :Victim, "Victima" %> <br>
+        <%= form.select :victim_id, options_from_collection_for_select(@game.players, :id, :name) %>
+      </div>
+
+      <div class="field">
+        <%= form.label :zone, "Zona de la muerte" %> <br>
+        <%= form.select :zone, options_from_collection_for_select(@game.players, :id, :name) %>
+      </div>
+
+      <br>
+
+      <div class="field">
+        <%= form.label :soplo, "Soplo?" %> <br>
+        <%= form.check_box :soplo %>
+      </div>
+
+      <div class="field">
+        <%= form.label :assassin_pig, "Mordisco de puerca" %> <br>
+        <%= form.check_box :assassin_pig %>
+      </div>
+
+      <div class="field">
+        <%= form.label :victim_pig, "Mata puercazo" %> <br>
+        <%= form.check_box :victim_pig %>
+      </div>
+
+
+
+      <div class="field">
+        <%= form.hidden_field :game_id, value: @game.id %>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <%= form.submit 'Añadir muerte', class: 'btn btn-primary btn-block' %>
+          </div>
+        </div>
+      </div>
+  <% end %>
+
+
+
+<% end %>
 <div class="row">
   <div class="col-md-2 ">
     <table class="table table-striped">
@@ -6,6 +71,7 @@
           <th scope="col">#</th>
           <th scope="col">Asesino</th>
           <th scope="col">Victima</th>
+          <th scope="col"></th>
 
         </tr>
       </thead>
@@ -16,6 +82,12 @@
             <td ><%= index + 1 %></td>
             <td><%= death.assassin.name %></td>
             <td><%= death.victim.name %></td>
+            <% if death.assassin_pig %>
+              <td><%= image_tag("cerdo_feliz", style: "width: 50%; height: 50%;") %></td>
+            <% end %>
+            <% if death.victim_pig %>
+                <td><%= image_tag("cerdo_enojado", style: "width: 60%; height: 60%;") %></td>
+            <% end%>
 
           </tr>
         <% end %>
@@ -82,70 +154,23 @@
 
 
 
-<% if @game.player_id.blank? %>
-    <%= form_with(model: @death) do |form| %>
-        <% if @death.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@death.errors.count, "error") %> prohibited thid death from beging saved: </h2>
-
-              <ul>
-                  <% @death.errors.full_messages.each do |message| %>
-                    <li><%= message %></li>
-                  <% end %>
-              </ul>
-            </div>
-        <% end %>
-
-        <div class="field">
-          <%= form.label :Assassin %> <br>
-          <%= form.select :assassin_id, options_from_collection_for_select(@game.players, :id, :name) %>
-        </div>
-
-        <div class="field">
-          <%= form.label :Victim %> <br>
-          <%= form.select :victim_id, options_from_collection_for_select(@game.players, :id, :name) %>
-        </div>
-        <br>
-
-        <div class="field">
-          <%= form.label :soplo, "Soplo?" %> <br>
-          <%= form.check_box :soplo %>
-        </div>
-
-
-
-        <div class="field">
-          <%= form.hidden_field :game_id, value: @game.id %>
-        </div>
-
-
-        <div class="row">
-          <div class="col-md-12">
-            <div class="form-group">
-              <%= form.submit 'Añadir muerte', class: 'btn btn-primary btn-block' %>
-            </div>
-          </div>
-        </div>
-    <% end %>
-
-      <%= form_with(model: @game) do |form| %>
-      <div class="field">
-        <%= form.label :Ganador %> <br>
-        <%= form.select :player_id, options_from_collection_for_select(@game.players, :id, :name) %>
-      </div>
-
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-group">
-            <%= form.submit 'Terminar juego', class: 'btn btn-primary btn-block' %>
-          </div>
-        </div>
-      </div>
-
-    <% end %>
-
-<% else %>
-    
+<% if !@game.player_id.blank? %>
     <p>Partida terminada, el ganador fue <%= @game.winner.name %> y ganó $<%= @game.player_games.where(player_id: @game.winner.id).first.winner_cash %> </p>
     <%= link_to 'Volver', games_path, class: 'btn btn-secondary' %>
 <% end %>
+
+  <%= form_with(model: @game) do |form| %>
+    <div class="field">
+      <%= form.label :Ganador %> <br>
+      <%= form.select :player_id, options_from_collection_for_select(@game.players, :id, :name) %>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <%= form.submit 'Terminar juego', class: 'btn btn-primary btn-block' %>
+        </div>
+      </div>
+    </div>
+
+  <% end %>
