--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
                 </li>
    
                 <li class="nav-item">
-                    <%= link_to 'Juegos', games_path, class: "nav-link" %>
+                    <%= link_to 'Games', games_path, class: "nav-link" %>
                 </li>
 
 
