--- a/app/views/games/in_game.html.erb
+++ b/app/views/games/in_game.html.erb
@@ -1,4 +1,4 @@
-<% if @game.player_id.blank? %>
+<% if @game.player_id.blank? && !@game.paused? %>
   <%= form_with(model: @death) do |form| %>
       <% if @death.errors.any? %>
           <div id="error_explanation">
@@ -20,6 +20,11 @@
       <div class="field">
         <%= form.label :Victim, "Victima" %> <br>
         <%= form.select :victim_id, options_from_collection_for_select(@game.players, :id, :name) %>
+      </div>
+
+      <div class="field">
+        <%= form.label :zone, "Zona de muerte" %> <br>
+        <%= form.select :zone, options_from_collection_for_select(@game.players, :id, :name) %>
       </div>
 
 
@@ -56,6 +61,12 @@
       </div>
   <% end %>
 
+
+  <a>
+  <%= link_to 'Pausar', estado_path(@game), method: :put, data: { confirm: '¿Seguro quieres Pausar?' }, class: 'btn btn-primary my-3' %>
+  </a>
+  
+
 <% end %>
 
 
@@ -67,7 +78,9 @@
           <th scope="col">#</th>
           <th scope="col">Asesino</th>
           <th scope="col">Victima</th>
+          <th scope="col">Zona</th>
           <th scope="col"></th>
+
 
         </tr>
       </thead>
@@ -78,6 +91,7 @@
             <td ><%= index + 1 %></td>
             <td><%= death.assassin.name %></td>
             <td><%= death.victim.name %></td>
+            <td><%= death.zone_death&.name %></td>
             <% if death.assassin_pig %>
               <td><%= image_tag(asset_path("cerdo_feliz.jpeg"), style: "width: 50%; height: 50%;") %></td>
             <% end %>
@@ -149,24 +163,35 @@
 
 
 
+<% case %> 
+  <% when !@game.player_id.blank? %>
+      <p>Partida terminada, el ganador fue <%= @game.winner.name %> y ganó $<%= @game.player_games.where(player_id: @game.winner.id).first.winner_cash %> </p>
+      <%= link_to 'Volver', games_path, class: 'btn btn-secondary' %>
 
-<% if !@game.player_id.blank? %>
-    <p>Partida terminada, el ganador fue <%= @game.winner.name %> y ganó $<%= @game.player_games.where(player_id: @game.winner.id).first.winner_cash %> </p>
-    <%= link_to 'Volver', games_path, class: 'btn btn-secondary' %>
-<% end %>
+  <% when @game.paused? %>
+      <p>Partida pausada por <%= "hola" %>  </p>
+      <% if @game.pauser_id == current_player.id %>
+        <%= link_to 'Reanudar', estado_path(@game), method: :put, data: { confirm: '¿Quieres reanudar?' }, class: 'btn btn-primary my-3' %>
+      <% else %>
+        <%= "Holaa" %>
+      <% end %>
+      <%= link_to 'Volver', games_path, class: 'btn btn-secondary' %>
 
-  <%= form_with(model: @game) do |form| %>
-    <div class="field">
-      <%= form.label :Ganador %> <br>
-      <%= form.select :player_id, options_from_collection_for_select(@game.players, :id, :name) %>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <div class="form-group">
-          <%= form.submit 'Terminar juego', class: 'btn btn-primary btn-block' %>
+  <% when @game.player_id.blank? && !@game.paused? %>
+      <%= form_with(model: @game) do |form| %>
+        <div class="field">
+          <%= form.label :Ganador %> <br>
+          <%= form.select :player_id, options_from_collection_for_select(@game.players, :id, :name) %>
         </div>
-      </div>
-    </div>
 
-  <% end %>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <%= form.submit 'Terminar juego', class: 'btn btn-primary btn-block' %>
+            </div>
+          </div>
+        </div>
+    <% end %>
+
+
+<% end %>
