se añadieron campos para valor de primera sangre

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -26,10 +26,20 @@
       <%= form.label :death_cash, "Valor de la muerte" %><br />
       <%= form.text_field :death_cash %>
     </div>
-
+    <br>
     <div class="field">
       <%= form.label :game_cash, "Valor del case" %><br />
       <%= form.text_field :game_cash %>
+    </div>
+    <br>
+    <div class="field">
+      <%= form.label :first_blood_cash_victim, "Primera sangre (victima)" %><br />
+      <%= form.text_field :first_blood_cash_victim %>
+    </div>
+    <br>
+    <div class="field">
+      <%= form.label :first_blood_cash_players, "Primera sangre (resto de jugadores)" %><br />
+      <%= form.text_field :first_blood_cash_players %>
     </div>
 
 
