metodo rachas victorias

--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -13,6 +13,7 @@
                     <th scoope="col">Asesinatos</th>
                     <th scoope="col">Muertes</th>
                     <th scoope="col">Finanzas</th>
+                    <th scoope="col">Racha victorias</th>
                     <th scoope="col" colspan="3"></th>
                     </tr>
                 </thead>
@@ -24,6 +25,7 @@
                         <td><%= @player.assassin_counter %></td>
                         <td><%= @player.victim_counter %></td>
                         <td><%= @player.finanzas %></td>
+                        <td><%= @player.racha_victorias %></td>
                     </tr>
                 </tbody>
             </table>
