--- a/app/views/games/in_game.html.erb
+++ b/app/views/games/in_game.html.erb
@@ -71,7 +71,7 @@
 
 
 <div class="row">
-  <div class="col-md-2 ">
+  <div class="col-md-3 ">
     <table class="table table-striped">
       <thead class="thead-dark">
         <tr>
@@ -91,7 +91,7 @@
             <td ><%= index + 1 %></td>
             <td><%= death.assassin.name %></td>
             <td><%= death.victim.name %></td>
-            <td><%= death.zone_death&.name %></td>
+            <td style="background-color: <%= death.zone_death&.color %>"><%= death.zone_death&.name %></td>
             <% if death.assassin_pig %>
               <td><%= image_tag(asset_path("cerdo_feliz.jpeg"), style: "width: 50%; height: 50%;") %></td>
             <% end %>
@@ -149,10 +149,10 @@
             <td><%= pj.player.name %></td>
 
             <% @game.player_games.each do |player| %>
-              <td><%= Death.where(assassin_id: pj.player.id, victim_id: player.player.id,game_id: @game.id).count %></td>
+              <td><%= deaths_for_player(player, pj, @game) %></td> 
             <% end %>
 
-            <td><%= Death.where(assassin_id: pj.player.id, game_id: @game.id).count %></td>
+            <td><%= deaths_total(pj, @game) %></td>
 
           </tr>
         <% end %>
@@ -165,7 +165,7 @@
 
 <% case %> 
   <% when !@game.player_id.blank? %>
-      <p>Partida terminada, el ganador fue <%= @game.winner.name %> y ganó $<%= @game.player_games.where(player_id: @game.winner.id).first.winner_cash %> </p>
+      <p><%= mensaje_final(@game) %> </p>
       <%= link_to 'Volver', games_path, class: 'btn btn-secondary' %>
 
   <% when @game.paused? %>
