añadir otra forma de imagenes, restringir accesos de usuarios sin iniciar seccion

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :link_de_imagen %><br />
+    <%= f.text_field :imagen_url %>
+  </div>
+
+  <div class="field">
     <%= f.label :color %><br />
     <%= f.text_field :color, autofocus: true, autocomplete: "color", type: 'color' %>
   </div>
