--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,9 +13,14 @@
     <%= f.text_field :color, autofocus: true, autocomplete: "color", type: 'color' %>
   </div>
 
-    <div class="field">
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :link_de_imagen %><br />
+    <%= f.text_field :imagen_url %>
   </div>
 
   <div class="form-group">
