--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -4,7 +4,7 @@
             
             <div class="col-md-2">
                 <div class="card mb-4 shadow-sm text-center">
-                    <%= image_tag (player.image).to_s %>
+                    <%= image_tag (player.imagen_url).to_s %>
                     <div class="card-body">
                         <p class="card-text">
                             <%= player.name %>
