--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-5">
-            <%= image_tag (@player.image).to_s , style: 'width:50%' %>
+            <%= image_tag (@player.imagen_url).to_s , style: 'width:50%' %>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-5">
             <h1><%= @player.name %></h1>
             <table class="table table-striped">
                 <thead class="thead-dark">
