--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,10 +14,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <%= link_to 'Games', games_path, class: "nav-link" %>
+                    <%= link_to 'Temporadas', seasons_path, class: "nav-link" %>
                 </li>
-
-
 
             
                 <% if current_player %>
