se agregaron las finanzas por season

--- a/app/views/games/in_game.html.erb
+++ b/app/views/games/in_game.html.erb
@@ -126,7 +126,7 @@
           <tr>
 
             <td><%= pj.player.name %></td>
-            <td>$<%= pj.cash %></td>
+            <td>$<%= pj.cash(@game.season) %></td>
 
           </tr>
         <% end %>
