--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -5,8 +5,8 @@
         </div>
         <div class="col-md-5">
             <h1><%= @player.name %></h1>
-            <% @seasons.each do |season| %>
-              <h1><%= season.name %></h1>
+            <% @seasons.reverse.each do |season| %>
+              <h4><%= season.name %></h4>
               <table class="table table-striped">
                   <thead class="thead-dark">
                       <tr>
@@ -31,32 +31,13 @@
                           <td><%= verdugo&.first %>: <%= verdugo&.last %></td>
                           <td><%= presa&.first %>: <%= presa&.last %></td>
                           <td><%= @player.finanzas(season) %></td>
-                          <td><%= @player.email %></td>
+                          <td><%= @player.soplos_in_season(season) %></td>
                       </tr>
                   </tbody>
               </table>
+              <hr>
             <% end %>
-
-            <table class="table table-striped">
-            
-                <thead class="thead-dark">
-                    <tr>
-                        <th scoope="col">Verdugos</th>
-                        <th scoope="col">Numero de muertes</th>
-                        <th scoope="col" colspan="3"></th>
-                    </tr>
-                </thead>
-
-                <tbody>
-                    <% @player.verdugos.each do |verdugo, muertes| %>
-                        <tr>
-                            <td><%= verdugo %></td>
-                            <td><%= muertes %></td>
-                        </tr>
-                    <% end %>
-                </tbody>
-            
-            </table>           
+        
             <div>
                 <% if current_player == @player%>
                     <%= link_to 'Editar', edit_player_registration_path, class: 'btn btn-warning'%>
